--- a/site/config.toml
+++ b/site/config.toml
@@ -1,30 +1,30 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "Casper Theme"
+title = "Scribbled Notes"
 theme = "hugo-theme-casper"
-disqusShortname = "spf13"
+disqusShortname = ""
 # Enable Google Analytics by inserting your tracking code
 googleAnalytics = ""
 # Define how many posts should appear on a site
-paginate = 10
+paginate = 5
 canonifyurls = true
 
 [params]
-  description = "this is my description"
+  description = "A tiny slice of the web for spewing the guts of my mind."
   cover = "images/cover.jpg"
-  author = "Valère JEANTET"
-  authorlocation = "Paris, France"
-  authorwebsite = "http://vjeantet.fr"
-  bio= "my bio"
+  author = "Jackie"
+  authorlocation = "UK"
+  authorwebsite = "http://scribblednotes.net"
+  bio= "Female, mid forties, geek, photography nut. Powered by tea."
   logo = "images/logo.png"
-  googleAnalyticsUserID = "UA-79101-12"
+  googleAnalyticsUserID = ""
   # Optional RSS-Link, if not provided it defaults to the standard index.xml
-  RSSLink = "http://feeds.feedburner.com/..."
-  githubName = "vjeantet"
-  twitterName = "vjeantet"
+  RSSLink = ""
+  githubName = "scribblednotes"
+  twitterName = "jackieplage"
   # facebookName = ""
   # linkedinName = ""
   # set true if you are not proud of using Hugo (true will hide the footer note "Proudly published with HUGO.....")
   hideHUGOSupport = false
   [params.social]
-    twitter = "your_twitter"
+    twitter = "jackieplage"
