--- a/site/config.toml
+++ b/site/config.toml
@@ -28,4 +28,4 @@ canonifyurls = true
   hideHUGOSupport = false
   [params.social]
     twitter = "jackieplage"
-    instagram - "jackieplage2"
+    instagram = "jackieplage2"
