Changed authorwebsite to reflect ssl

--- a/site/config.toml
+++ b/site/config.toml
@@ -14,7 +14,7 @@ canonifyurls = true
   cover = "images/IMG_1024.jpg"
   author = "Jackie"
   authorlocation = "UK"
-  authorwebsite = "http://scribblednotes.net"
+  authorwebsite = "https://scribblednotes.net"
   bio= "Female, mid forties, geek, photography nut. Powered by nicotine, tea, Hugo and Netlify."
   logo = "images/avatar@2x.jpg"
   googleAnalyticsUserID = ""
